Renamed some API and added another dmeo page

--- a/src/NetPack.Web/Views/Shared/_Layout.cshtml
+++ b/src/NetPack.Web/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="SingleTypescriptFile" class="navbar-brand">NetPack.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="MultipleTypescriptFiles" class="navbar-brand">NetPack.Web</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
