--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
@@ -11,7 +11,7 @@
 
 @section scripts
 {
-    <script asp-src-include="~/wwwroot/ts/**/*.js"></script>
+    <script asp-src-include="/wwwroot/ts/**/*.js"></script>
 }
 
 
