--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
@@ -11,7 +11,7 @@
 
 @section scripts
 {
-    <script asp-src-include="/wwwroot/js/bundleA.js"></script>
+    <script asp-src-include="wwwroot/js/bundleA.js"></script>
 }
 
 
