--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "SingleTypescriptFile";
+    ViewData["Title"] = "Multiple Compiled Typescript Files";
 }
 
 <p>
@@ -11,7 +11,7 @@
 
 @section scripts
 {
-    <script asp-src-include="/wwwroot/ts/**/*.js"></script>
+    <script asp-src-include="/netpack/ts/**/*.js"></script>
 }
 
 
