Closes #8 - Combine pipe now working with sourcemaps.

--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
@@ -3,6 +3,8 @@
 }
 
 <p>
+    Currently not working due to <a href="https://github.com/aspnet/StaticFiles/issues/158">this issue.</a>
+
     The following uses the standard script TagHelper to include multiple scripts on the page, specified by a glob.
     These happen to be outputs from the NetPack typescript compilation pipeline.
 </p>
@@ -11,7 +13,12 @@
 
 @section scripts
 {
-    <script asp-src-include="/netpack/ts/**/*.js"></script>
+@*see https://github.com/aspnet/StaticFiles/issues/158*@
+    @*<script asp-src-include="/netpack/ts/**/*.js"></script>*@
+
+    <script type="text/javascript" src="/netpack/ts/Greeter.js"></script>
+    <script type="text/javascript" src="/netpack/ts/Another.js"></script>
+
 }
 
 
