--- a/src/NetPack.Web/Views/Home/SingleTypescriptFile.cshtml
+++ b/src/NetPack.Web/Views/Home/SingleTypescriptFile.cshtml
@@ -11,7 +11,7 @@
 {
  
 
-    <script type="text/javascript" src="/netpack/ts/Greeter.js" )"></script>
+    <script type="text/javascript" src="/netpack/ts/Greeter.js"></script>
 }
 
 
