--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
@@ -11,7 +11,11 @@
 
 @section scripts
 {
-    <script asp-src-include="netpack/tsbundle/bundleA.js"></script>
+    @*see https://github.com/aspnet/StaticFiles/issues/158*@
+
+    @*<script asp-src-include="netpack/tsbundle/bundleA.js"></script>*@
+    <script type="text/javascript" src="/netpack/tsbundle/bundleA.js"></script>
+
 }
 
 
