--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
@@ -13,8 +13,8 @@
 {
     @*see https://github.com/aspnet/StaticFiles/issues/158*@
 
-    @*<script asp-src-include="netpack/tsbundle/bundleA.js"></script>*@
-    <script type="text/javascript" src="/netpack/tsbundle/bundleA.js"></script>
+    @*<script asp-src-include="netpack/bundleA.js"></script>*@
+    <script type="text/javascript" src="/netpack/bundleA.js"></script>
 
 }
 
