--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
@@ -12,10 +12,10 @@
 @section scripts
 {
 @*see https://github.com/aspnet/StaticFiles/issues/158*@
-    <script type="text/javascript" asp-src-include="/netpack/**/*.js"></script>
+    <script type="text/javascript" asp-src-include="/netpack/**/*.js" asp-src-exclude="/netpack/**/bundle.js"></script>
 
-    <script type="text/javascript" src="/netpack/ts/Greeter.js"></script>
-    <script type="text/javascript" src="/netpack/ts/Another.js"></script>
+    @*<script type="text/javascript" src="/netpack/ts/Greeter.js"></script>
+    <script type="text/javascript" src="/netpack/ts/Another.js"></script>*@
 
 }
 
