--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFilesCombinedToSingleJsFile.cshtml
@@ -11,10 +11,8 @@
 
 @section scripts
 {
-    @*see https://github.com/aspnet/StaticFiles/issues/158*@
-
-    @*<script asp-src-include="netpack/bundleA.js"></script>*@
-    <script type="text/javascript" src="/netpack/bundleA.js"></script>
+    @*see https://github.com/aspnet/StaticFiles/issues/158*@  
+    <script type="text/javascript" src="/netpack/bundle.js"></script>
 
 }
 
