Functional requirejs demo page.

--- a/src/NetPack.Web/Views/Home/RequireJsOptimised.cshtml
+++ b/src/NetPack.Web/Views/Home/RequireJsOptimised.cshtml
@@ -15,11 +15,16 @@
         Optimizes CSS by inlining CSS files referenced by @@import and removing comments.
     </li>
 </ul>  
+<p>Modules loaded from optimised file:</p>
+<ul id="modules">
+   
+</ul> 
 
 
 
 @section scripts
 {
+      
 
     <script data-main="/netpack/built.js" src="/lib/require.js"></script>
 
