--- a/src/NetPack.Web/Views/Shared/_Layout.cshtml
+++ b/src/NetPack.Web/Views/Shared/_Layout.cshtml
@@ -2,9 +2,25 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NetPack.Web</title>
 
+    <environment names="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
+    </environment>
+    <environment names="Staging,Production">
+        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    </environment>  
+    <style>
+      body {
+          padding-top: 150px;
+      }
+    </style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,13 +32,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="SingleTypescriptFile" class="navbar-brand">Single Typescript File</a>
-                <a asp-area="" asp-controller="Home" asp-action="MultipleTypescriptFiles" class="navbar-brand">Multiple Typescript Files</a>
-                <a asp-area="" asp-controller="Home" asp-action="MultipleTypescriptFilesCombinedToSingleJsFile" class="navbar-brand">Multiple Typescript Files Combined To Single Js File</a>
-                <a asp-area="" asp-controller="Home" asp-action="RequireJsOptimised" class="navbar-brand">A RequireJs optimised file based on AMD.</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <a asp-area="" asp-controller="Home" asp-action="SingleTypescriptFile" class="navbar-brand">Single Typescript File</a>
+                    <a asp-area="" asp-controller="Home" asp-action="MultipleTypescriptFiles" class="navbar-brand">Multiple Typescript Files</a>
+                    <a asp-area="" asp-controller="Home" asp-action="MultipleTypescriptFilesCombinedToSingleJsFile" class="navbar-brand">Multiple Typescript Files Combined To Single Js File</a>
+                    <a asp-area="" asp-controller="Home" asp-action="RequireJsOptimised" class="navbar-brand">A RequireJs optimised file based on AMD.</a>
                     @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>*@
                 </ul>
             </div>
@@ -36,6 +52,24 @@
         </footer>
     </div>
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <environment names="Development">
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+       
+    </environment>
+    <environment names="Staging,Production">
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                asp-fallback-test="window.jQuery">
+        </script>
+        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
+                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
+        </script>
+        <script src="~/js/site.min.js" asp-append-version="true"></script>
+    </environment>
+  
     @RenderSection("scripts", required: false)
 </body>
 </html>
