Disabled JsMin source maps.

--- a/src/NetPack.Web/Views/Shared/_Layout.cshtml
+++ b/src/NetPack.Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     <a asp-area="" asp-controller="Home" asp-action="MultipleTypescriptFilesCombinedToSingleJsFile" class="navbar-brand">Multiple Typescript Files Combined To Single Js File</a>
                     <a asp-area="" asp-controller="Home" asp-action="RequireJsOptimised" class="navbar-brand">A RequireJs optimised file based on AMD.</a>
                     <a asp-area="" asp-controller="Home" asp-action="RequireJsOptimisedTagHelper" class="navbar-brand">A RequireJs Optimise TagHelper.</a>
-                    <a asp-area="" asp-controller="Home" asp-action="JsMin" class="navbar-brand">JsMin minifier with sourcemaps.</a>
+                    <a asp-area="" asp-controller="Home" asp-action="JsMin" class="navbar-brand">JsMin.</a>
 
                     @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>*@
                 </ul>
