Closes #29 Fixed typescript incremental compilation and sample pages.

--- a/src/NetPack.Web/Views/Home/JsMin.cshtml
+++ b/src/NetPack.Web/Views/Home/JsMin.cshtml
@@ -12,6 +12,10 @@
 @section scripts
 {
     <script type="text/javascript" src="/netpack/js/foo.min.js"></script>
+    <script type="text/javascript">
+        document.body.querySelector(".message").innerHTML += process(1); 
+        
+    </script>
 }
 
 
