#30 - Rollup example working

--- a/src/NetPack.Web/Views/Shared/_Layout.cshtml
+++ b/src/NetPack.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,10 @@
                     <a asp-area="" asp-controller="Home" asp-action="RequireJsOptimised" class="navbar-brand">A RequireJs optimised file based on AMD.</a>
                     <a asp-area="" asp-controller="Home" asp-action="RequireJsOptimisedTagHelper" class="navbar-brand">A RequireJs Optimise TagHelper.</a>
                     <a asp-area="" asp-controller="Home" asp-action="JsMin" class="navbar-brand">JsMin.</a>
+                    <a asp-area="" asp-controller="Home" asp-action="RollupOptimised" class="navbar-brand">Rollup Js Optimised.</a>
 
+
+                    
                     @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>*@
                 </ul>
             </div>
