--- a/src/NetPack.Web/Views/Home/JsMin.cshtml
+++ b/src/NetPack.Web/Views/Home/JsMin.cshtml
@@ -11,7 +11,7 @@
 
 @section scripts
 {
-    <script type="text/javascript" src="/netpack/js/foo.min.js"></script>
+    <script type="text/javascript" src="/netpack/js/foo.min.js" asp-append-version="true"></script>
     <script type="text/javascript">
         document.body.querySelector(".message").innerHTML += process(1); 
         
