--- a/src/NetPack.Web/Views/Home/BrowserReload.cshtml
+++ b/src/NetPack.Web/Views/Home/BrowserReload.cshtml
@@ -2,13 +2,36 @@
     ViewData["Title"] = "Rollup Code Splitting";
 }
 
+<h2>Demonstrates automatic browser reload..</h2>
+<p>NetPack browser reload can be configured to watch for file changes under wwwroot (web root files) as well as content file changes (such as the Views/**/*.cshtml files) and trigger a browser reload for you.</p>
+<p>In startup.cs simply configure it as desired:</p>
+<code><pre>
+    services.AddBrowserReload((options) =>
+    {
+        // trigger browser reload when our bundle file changes.
+        options.WatchWebRoot("/netpack/built.js");
+        options.WatchContentRoot("/Views/**/*.cshtml");
+    });
+</pre>
+</code>
+<p>Lastly, include the browser refresh client on your page or layout.cshtml</p>
+<code>
+    <pre>
+    &#x3C;script src=&#x22;~/lib/signalr/dist/browser/signalr.js&#x22;&#x3E;&#x3C;/script&#x3E;
+    &#x3C;script src=&#x22;~/js/reload.js&#x22;&#x3E;&#x3C;/script&#x3E;
+</pre>
+</code>
+<p><strong>Note: the /js/reload.js file is automatically served as an embedded resource from the Netpack.BrowserReload assembly - you do not have to add this script yourself to your project. However the signalr script you do have to source yourself, use signalr documentation for guidance on obtaining it and adding it to your project.</strong></p>
 <p>
-    Demonstrates automatic browser reload when assets change.
+    In the example above we want to trigger a reload if our javascript bundle file is changed. We have configured a NetPack pipeline to build this bundle for us from the input files under `/wwwroot/amd/*.js`.
+    Therefore to trigger a browser reload, change a file under `/wwwroot/amd/` folder. This will cause netpack to rebuild the bundle file `/netpack/built.js`, which will then trigger a browser reload!
+
+    BrowserReload is also configured in startup.cs to watch for changes on content files under: `Views/**/*.cshtml` so you can also make a change to any of those razor views to trigger a browser refresh.
+
 </p>
 
 
 <h1>Browser Reload Demo</h1>
-<input type="button" id="sendButton" value="Send Message" />
 
 <ul id="modules"></ul>
 
@@ -16,7 +39,7 @@
     {
 
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
-    <script src="~/js/reload/reload.js"></script>
+    <script src="~/js/reload.js"></script>
 
     <script src="/lib/require.js"></script>
     <script src="~/netpack/built.js" asp-append-version="true"></script>
