--- a/src/NetPack.Web/Views/Home/BrowserReload.cshtml
+++ b/src/NetPack.Web/Views/Home/BrowserReload.cshtml
@@ -39,7 +39,7 @@
     {
 
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
-    <script src="~/js/reload.js"></script>
+    <script src="~/js/reload.js"></script> @*This is embedded, you don't have to source it yourself*@
 
     <script src="/lib/require.js"></script>
     <script src="~/netpack/built.js" asp-append-version="true"></script>
