--- a/src/NetPack.Web/Views/Shared/_Layout.cshtml
+++ b/src/NetPack.Web/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                     <a asp-area="" asp-controller="Home" asp-action="RollupBundle" class="navbar-brand">Rollup Js Single File Bundle.</a>
                     <a asp-area="" asp-controller="Home" asp-action="RollupCodeSplitting" class="navbar-brand">Rollup Js Code Splitting.</a>
                     <a asp-area="" asp-controller="Home" asp-action="BrowserReload" class="navbar-brand">Automatic Browser Reload</a>
+                    <a asp-area="" asp-controller="Home" asp-action="SystemHmr" class="navbar-brand">SystemJS Hot Module Reload</a>
 
 
 
