#26 - Basic HMR reload seems to be working (WIP)

--- a/src/NetPack.Web/Views/Home/SystemHmr.cshtml
+++ b/src/NetPack.Web/Views/Home/SystemHmr.cshtml
@@ -34,7 +34,7 @@
                 "@@hot": "@@empty"
             }
         });
-        SystemJS.import('../hmr/ModuleA.js').then(function (m) {
+        SystemJS.import('/netpack/rollup/hmr/nomodule/entry-a.js').then(function (m) {
         });
                     //System.import('hmrbundle.js');
                     //System.import('/netpack/rollup/nomodule/main-b.js');
