--- a/src/NetPack.Web/Views/Home/SystemHmr.cshtml
+++ b/src/NetPack.Web/Views/Home/SystemHmr.cshtml
@@ -25,8 +25,12 @@
 
     <script src="~/lib/systemjs/system.js" type="text/javascript"></script>
     @*<script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.21.5/system.js" type="text/javascript"></script>*@
-    
+
     <script src="~/lib/systemjs-hmr/dist/systemjs-hmr.js" type="text/javascript"></script>
+
+    @*Following needed for hmr*@
+    <script src="~/lib/signalr/dist/browser/signalr.js"></script>
+    <script src="~/js/hmrreload.js"></script> @*This is embedded, you don't have to source it yourself*@
 
     <script>
         SystemJS.config({
@@ -36,8 +40,8 @@
         });
         SystemJS.import('/netpack/rollup/hmr/nomodule/entry-a.js').then(function (m) {
         });
-                    //System.import('hmrbundle.js');
-                    //System.import('/netpack/rollup/nomodule/main-b.js');
+                            //System.import('hmrbundle.js');
+                            //System.import('/netpack/rollup/nomodule/main-b.js');
     </script>
 
 
