--- a/src/NetPack.Web/Views/Home/SystemHmr.cshtml
+++ b/src/NetPack.Web/Views/Home/SystemHmr.cshtml
@@ -29,8 +29,11 @@
     <script src="~/lib/systemjs-hmr/dist/systemjs-hmr.js" type="text/javascript"></script>
 
     @*Following needed for hmr*@
+
+    <script src="~/embedded/netpack/js/pubsub.min.js"></script> @*This is embedded, you don't have to source it yourself*@
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
-    <script src="~/js/hmrreload.js"></script> @*This is embedded, you don't have to source it yourself*@
+    <script src="~/embedded/netpack/js/publisher.js"></script> @*This is embedded, you don't have to source it yourself*@
+    <script src="~/embedded/netpack/js/reloader-system.js"></script> @*This is embedded, you don't have to source it yourself*@
 
     <script>
         SystemJS.config({
@@ -40,8 +43,8 @@
         });
         SystemJS.import('/netpack/rollup/hmr/nomodule/entry-a.js').then(function (m) {
         });
-                            //System.import('hmrbundle.js');
-                            //System.import('/netpack/rollup/nomodule/main-b.js');
+                                        //System.import('hmrbundle.js');
+                                        //System.import('/netpack/rollup/nomodule/main-b.js');
     </script>
 
 
