--- a/src/NetPack.Web/Views/Home/RequireJSHmr.cshtml
+++ b/src/NetPack.Web/Views/Home/RequireJSHmr.cshtml
@@ -76,10 +76,10 @@
                     define("@@hot", [], function () { return oldInstance; });
                     // the module is reloaidng properly.
                     // maybe try fetching the js myself and then eval() ing it?
-                    var hot = require(['require', '@@hot'], function (require, hot) {
-                        require(['require', foundModuleId], function (require, foundModuleId) {
-                            // PubSub.publishSync('ModuleReloaded', { Id: foundModuleId, old: oldInstance, new: mod });
-                        });
+                    var hot = require(['require', '@@hot', foundModuleId], function (require, oldInstance, newInstance) {
+                     //   require(['require', foundModuleId], function (require, foundModuleId) {
+                        PubSub.publishSync('ModuleReloaded', { Id: foundModuleId, old: oldInstance, new: newInstance });
+                      //  });
                     });
 
 
