--- a/src/NetPack.Web/Views/_ViewImports.cshtml
+++ b/src/NetPack.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using NetPack.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, NetPack.RequireJs.TagHelpers
+@addTagHelper *, NetPack.HotModuleReload.TagHelpers
