RequireJS HMR #36 Still need to sort mismatched anon define when using requirejs.

--- a/src/NetPack.Web/Views/Shared/_Layout.cshtml
+++ b/src/NetPack.Web/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
                     <a asp-area="" asp-controller="Home" asp-action="SystemHmrTagHelper" class="navbar-brand">SystemJS Hot Module Reload TagHelper</a>
 
                     <a asp-area="" asp-controller="Home" asp-action="RequireJSHmr" class="navbar-brand">RequireJS Hot Module Reload</a>
+                    <a asp-area="" asp-controller="Home" asp-action="RequireJSHmrTagHelper" class="navbar-brand">RequireJS Hot Module Reload using TagHelper</a>
 
                     @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>*@
                 </ul>
