--- a/src/NetPack.Web/Views/Home/RequireJSHmrTagHelper.cshtml
+++ b/src/NetPack.Web/Views/Home/RequireJSHmrTagHelper.cshtml
@@ -30,19 +30,13 @@
     @*Following needed for hmr*@
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
 
-    <script src="~/embedded/netpack/js/pubsub.min.js"></script> @*This is embedded, you don't have to source it yourself*@
-    <script src="~/embedded/netpack/js/publisher-filechange.js"></script> @*This is embedded, you don't have to source it yourself*@
-    @*<script type="text/javascript">
-
-        </script>*@
-
     <script src="/requireConfig.js"></script>
     <script src="~/lib/require.js/require.min.js"></script>
-    <script src="~/embedded/netpack/js/reloader-require.js">
-    </script>
+    
+    <Hmr module-reloader-src="/embedded/netpack/js/reloader-require.js"></Hmr>
 
-    <script type="text/javascript">    
-                require(["SomePage"]);
+    <script type="text/javascript">
+        require(["SomePage"]);
     </script>
 
     @*<script type="text/javascript">
