--- a/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
+++ b/src/NetPack.Web/Views/Home/MultipleTypescriptFiles.cshtml
@@ -12,11 +12,8 @@
 @section scripts
     {
     @*see https://github.com/aspnet/StaticFiles/issues/158*@
-    <script data-main="/netpack/ts/Greeter.js" src="/lib/require.js"></script>
-    @*<script type="text/javascript" asp-src-include="/netpack/amd/*.js" asp-src-exclude="/netpack/amd/bundle.js"></script>*@
+    <script data-main="/netpack/ts/Greeter.js" src="~/lib/require.js/require.min.js"></script>
 
-    @*<script type="text/javascript" src="/netpack/ts/Greeter.js"></script>
-        <script type="text/javascript" src="/netpack/ts/Another.js"></script>*@
 
 }
 
