--- a/src/NetPack.Web/Views/Home/RollupBundle.cshtml
+++ b/src/NetPack.Web/Views/Home/RollupBundle.cshtml
@@ -30,7 +30,7 @@
 </script>
 
     @*<script src="/lib/require.js"></script>*@
-    <script data-main="/netpack/rollupbundle.js" src="/lib/require.js"></script>
+    <script data-main="/netpack/rollupbundle.js" src="~/lib/require.js/require.min.js"></script>
 
 
 }
