--- a/src/NetPack.Web/Views/Home/SingleTypescriptFile.cshtml
+++ b/src/NetPack.Web/Views/Home/SingleTypescriptFile.cshtml
@@ -11,7 +11,7 @@
 
 @section scripts
     {
-    <script data-main="/netpack/ts/Greeter.js" src="/lib/require.js"></script>   
+    <script data-main="/netpack/ts/Greeter.js" src="~/lib/require.js/require.min.js"></script>   
 }
 
 
